Fixed various Javadoc / checkstyle issues
git-svn-id: https://svn-us.apache.org/repos/asf/commons/proper/jexl/trunk@824415 13f79535-47bb-0310-9956-ffa450edef68